change HTML tag

--- a/beginner.html
+++ b/beginner.html
@@ -6,32 +6,43 @@
     <title>Hi , this is Ck</title>
 </head>
 <body>
-    <h1>Hi , this is Ck</h1>
-    <p>Soemthing idk , just type in here</p>
+    <main>
+        <article>
+            <h1>Hi , this is Ck</h1>
+            <p>Soemthing idk , just type in here</p>
+        </article>
     <hr>
-    <div class="food">
-        <h1>My Top 3 Favourite Foods</h1>
-        <ol>
-            <li>Chicken Rice</li>
-            <li>McSpicy</li>
-            <li>McNuggets</li>
-    </div>
+        <section>
+            <h1>My Top 3 Favourite Foods</h1>
+                <ol>
+                    <li>Chicken Rice</li>
+                    <li>McSpicy</li>
+                    <li>McNuggets</li>
+        </section>
     <hr>
-    <div class="freeTime">
-        <h1>Things I like to do in my free time</h1>
-        <ul>
-            <li>Play Game</li>
-            <li>Watch Anime</li>
-            <li>Read Manga</li>
-        </ul>
-    </div>
+        <section>
+            <h1>My Top 3 Favourite Movies</h1>
+                <ol>
+                    <li>Avengers: Endgame</li>
+                    <li>Spiderman: Far From Home</li>
+                    <li>Doctor Strange</li>
+        </section>
     <hr>
-    <div class="city">
+        <section>
+            <h1>Things I like to do in my free time</h1>
+                <ul>
+                    <li>Play Game</li>
+                    <li>Watch Anime</li>
+                    <li>Read Manga</li>
+                </ul>
+        </section>
+    <hr>
+    <section>
         <h1>Learn more about my city</h1>
-        <ul>
-            <li><a href = https://en.wikipedia.org/wiki/Hong_Kong>City: Hong Kong</a></li>
-        </ul>
+        <a href="https://en.wikipedia.org/wiki/Hong_Kong">City: Hong Kong</a>
+        <br>
         <img width="500px" src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0e/Hong_Kong_Island_Skyline_2009.jpg/1920px-Hong_Kong_Island_Skyline_2009.jpg" alt="Hong Kong">
-    </div>
+    </section>
+    </main>
 </body>
 </html>
