--- a/table.html
+++ b/table.html
@@ -31,5 +31,9 @@
                 <td>Potter</td>
                 <td>20</td>
             </tr>
+        <body>
+            <video controls height="500" width="800" src ="vidoe.mp4">
+            <!--autoplay will play video without audio -->
+        </body>
         </tbody>
 </body>
